RELEASE 1.13 - fix spacing

--- a/style.css
+++ b/style.css
@@ -503,7 +503,8 @@ nav .links li a:hover i {
 
 .project {
     width: 100%;
-    height: 50vh;
+    height: fit-content;
+    padding: 1vh 1vw;
 }
 
 .projecthead {
